--- a/Joaquin.html
+++ b/Joaquin.html
@@ -8,23 +8,45 @@
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
-            background-color: #f5f5f5;
+            background-color: #e6f7ff;
             color: #333;
         }
         .contacto-hero {
-            background-color: #0a192f;
+            background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+            background-size: cover;
+            background-position: center;
             color: white;
-            padding: 80px 20px;
+            padding: 100px 20px;
             text-align: center;
+            position: relative;
+        }
+        .contacto-hero::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
         }
         .contacto-hero h1 {
             font-size: 3rem;
             margin-bottom: 10px;
             animation: fadeIn 2s ease-in-out;
+            position: relative;
         }
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(-20px); }
             to { opacity: 1; transform: translateY(0); }
+        }
+        .profile-img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            border: 4px solid #00b4d8;
+            object-fit: cover;
+            margin-top: 20px;
+            position: relative;
         }
         .contacto-container {
             display: flex;
@@ -48,7 +70,7 @@
             border-radius: 4px;
         }
         .formulario button {
-            background: #0a192f;
+            background: #00b4d8;
             color: white;
             border: none;
             padding: 12px 24px;
@@ -57,7 +79,7 @@
             transition: background 0.3s;
         }
         .formulario button:hover {
-            background: #1e3a8a;
+            background: #0077b6;
         }
         .info-contacto {
             flex: 1;
@@ -70,18 +92,43 @@
             margin-bottom: 20px;
         }
         .info-item h3 {
-            color: #0a192f;
+            color: #0077b6;
         }
         .waauw {
-            font-size: 0.9rem;
-            color: #48dbfb;
+            font-size: 1.2rem;
+            color: #00b4d8;
             font-weight: bold;
-            animation: blink 1.5s infinite;
+            animation: blink 1.5s infinite, glow 2s ease-in-out infinite;
+            position: relative;
         }
         @keyframes blink {
             0% { opacity: 0.5; }
             50% { opacity: 1; }
             100% { opacity: 0.5; }
+        }
+        @keyframes glow {
+            0% { text-shadow: 0 0 5px #00b4d8; }
+            50% { text-shadow: 0 0 20px #00b4d8; }
+            100% { text-shadow: 0 0 5px #00b4d8; }
+        }
+        .whatsapp-btn {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: #25D366;
+            color: white;
+            padding: 15px;
+            border-radius: 50%;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            z-index: 1000;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 60px;
+            height: 60px;
+        }
+        .whatsapp-btn img {
+            width: 30px;
         }
     </style>
 </head>
@@ -89,6 +136,8 @@
     <section class="contacto-hero">
         <h1>JOAQUÍN FERNÁNDEZ IRAZÚ</h1>
         <p>Tecnología que transforma <span class="waauw">| WAAUW!</span></p>
+        <!-- REEMPLAZA "tu-foto.jpg" CON TU IMAGEN -->
+        <img src="tu-foto.jpg" alt="Joaquín" class="profile-img">
     </section>
 
     <div class="contacto-container">
@@ -119,5 +168,10 @@
             </div>
         </div>
     </div>
+
+    <!-- Botón de WhatsApp -->
+    <a href="https://wa.me/549983810378" class="whatsapp-btn">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+    </a>
 </body>
 </html>
